_includes/css/main.css
/*!
 * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    overflow-x: hidden;
    font-family: "Roboto Condensed","Helvetica Neue",Helvetica,Arial,sans-serif;
}

p, li {
    font-size: 20px;
}

p.small {
    font-size: 16px;
}

a,
a:hover,
a:focus,
a:active,
a.active {
    outline: 0;
    color: #{{ site.color.light }};
}

.accent-hover:hover {
    color: #{{ site.color.accent }};
    text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-transform: uppercase;
    font-family: 'Martel Sans',"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 800;
}

hr {
    width: 250px;
    border-top: none;
    border-bottom: 3px solid #{{ site.color.dark }};
    margin-bottom: 35px;
}

.img-centered {
    margin: 0 auto;
}

.light-background {
    color: #{{ site.color.medium }};
}

header {
    text-align: center;
    color: #{{ site.color.dark }};
    background: #{{ site.color.light }};
}

header .container {
    padding-top: 100px;
    padding-bottom: 50px;
}

header img {
    margin-top: 25px;
}

header .intro-text .name {
    display: block;
    text-transform: uppercase;
    font-family: 'Martel Sans',"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 2em;
    font-weight: 800;
}

header .intro-text .skills {
    font-size: 1.25em;
    font-weight: 300;
}

@media(min-width:768px) {
    header .container {
        padding-top: 125px;
        padding-bottom: 50px;
    }

    header .intro-text .name {
        font-size: 3.75em;
    }

    header .intro-text .skills {
        font-size: 1.75em;
    }
}

header .right-frame {
    text-align: left;
    
    margin-top: 50px;
}

header .right-frame li {
    list-style-type: none;
    margin-bottom: 15px;
}

@media(min-width:768px) {
    .navbar-fixed-top {
        padding: 25px 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-fixed-top .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-fixed-top.navbar-shrink {
        padding: 10px 0;
    }

    .navbar-fixed-top.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

.navbar {
    text-transform: uppercase;
    font-family: 'Martel Sans',"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 800;
}

.navbar li {
    font-size: 18px;
}

.navbar a:focus {
    outline: 0;
}

.navbar .navbar-nav {
    letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
}

.navbar-default,
.navbar-inverse {
    border: 0;
}

.navbar-default .navbar-nav li.active a,
.navbar-default .navbar-nav li.active a:hover,
.navbar-default .navbar-nav li.active a:focus {
    background-color: #{{ site.color.medium }};
    border-radius: 6px;
}

section {
    padding: 100px 0;
}

section h2 {
    margin: 0;
    font-size: 3em;
}

section.success {
    color: #{{ site.color.dark }};
    background-color: #{{ site.color.light }};
}

@media(max-width:767px) {
    section {
        padding: 75px 0;
    }

    section.first {
        padding-top: 75px;
    }
}

.profile-item {
    margin-top: 20px;
}

.profile-item h3 {
    margin: 50px 0 10px;
}

.profile-item p {
    color: #{{ site.color.dark }};
    font-size: 19px;
}

.profile-item a {
    color: #{{ site.color.medium }};
}

.profile-item img {
    display: block;
    margin: 0 auto;
    width: 100%;
    max-width: 300px;
    border-radius: 6px;
}

@media(max-width:768px) {
    .profile-item h3 {
        text-align: center;
    }
    .profile-item p {
        margin-top: 15px;
    }
}

.portfolio-item {
    right: 0;
    margin: 0 0 15px;
}

.portfoilo-item img {
}

.portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

.portfolio-item .portfolio-link .caption {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    border-radius: 6px;
    /* This should be equal to the site 'light' color */
    background: rgba(200, 221, 248, .9);
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
}

.portfolio-item .portfolio-link .caption:hover {
    opacity: 1;
}

.portfolio-item .portfolio-link .caption .caption-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 20px;
    color: #fff;
}

.portfolio-item .portfolio-link .caption .caption-content i {
    margin-top: -12px;
}

.portfolio-item .portfolio-link .caption .caption-content h3,
.portfolio-item .portfolio-link .caption .caption-content h4 {
    margin: 0;
}

#portfolio * {
    z-index: 2;
}

@media(min-width:767px) {
    .portfolio-item {
        margin: 0 0 30px;
    }
}

.btn-default {
    background-color: #{{ site.color.medium }};
    border-color: #{{ site.color.medium }};
}

.btn-default:hover,
.btn-default:focus {
    background-color: #{{ site.color.accent }};
    border-color: #{{ site.color.accent }};
}

.btn-success:hover,
.btn-success:focus {
    background-color: #{{ site.color.medium }};
    border-color: #{{ site.color.medium }};
}

.btn-outline {
    margin-top: 15px;
    border: solid 2px #fff;
    font-size: 20px;
    color: #fff;
    background: 0 0;
    transition: all .3s ease-in-out;
}

.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
    border: solid 2px #fff;
    color: #{{ site.color.accent }};
    background: #fff;
}

.floating-label-form-group {
    position: relative;
    margin-bottom: 0;
    padding-bottom: .5em;
    border-bottom: 1px solid #eee;
}

.floating-label-form-group input,
.floating-label-form-group textarea {
    z-index: 1;
    position: relative;
    padding-right: 0;
    padding-left: 0;
    border: 0;
    border-radius: 0;
    font-size: 1.5em;
    background: 0 0;
    box-shadow: none!important;
    resize: none;
}

.floating-label-form-group label {
    display: block;
    z-index: 0;
    position: relative;
    top: 2em;
    margin: 0;
    font-size: .85em;
    line-height: 1.764705882em;
    vertical-align: middle;
    vertical-align: baseline;
    opacity: 0;
    -webkit-transition: top .3s ease,opacity .3s ease;
    -moz-transition: top .3s ease,opacity .3s ease;
    -ms-transition: top .3s ease,opacity .3s ease;
    transition: top .3s ease,opacity .3s ease;
}

.floating-label-form-group::not(:first-child) {
    padding-left: 14px;
    border-left: 1px solid #eee;
}

.floating-label-form-group-with-value label {
    top: 0;
    opacity: 1;
}

.floating-label-form-group-with-focus label {
    color: #{{ site.color.light }};
}

form .row:first-child .floating-label-form-group {
    border-top: 1px solid #eee;
}

footer {
    color: #fff;
}

footer h3 {
    margin-bottom: 30px;
}

footer .footer-above {
    padding-top: 50px;
    background-color: #{{ site.color.dark }};
}

footer .footer-col {
    margin-bottom: 50px;
}

footer .footer-below {
    padding: 25px 0;
    background-color: #{{ site.color.medium }};
}

.btn-social {
    display: inline-block;
    width: 50px;
    height: 50px;
    border: 2px solid #fff;
    border-radius: 100%;
    text-align: center;
    font-size: 20px;
    line-height: 45px;
}

.btn:focus,
.btn:active,
.btn.active {
    outline: 0;
}

.scroll-top {
    z-index: 1049;
    position: fixed;
    right: 2%;
    bottom: 2%;
    width: 50px;
    height: 50px;
}

.scroll-top .btn {
    width: 50px;
    height: 50px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 28px;
}

.scroll-top .btn:focus {
    outline: 0;
}

.portfolio-modal .modal-content {
    padding: 100px 0;
    min-height: 100%;
    border: 0;
    border-radius: 0;
    text-align: center;
    background-clip: border-box;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.portfolio-modal .modal-content h2 {
    margin: 0;
    font-size: 3em;
}

.portfolio-modal .modal-content img {
    margin-bottom: 30px;
}

.portfolio-modal .modal-content .item-details {
    margin: 30px 0;
}

.portfolio-modal .close-modal {
    position: absolute;
    top: 25px;
    right: 25px;
    width: 75px;
    height: 75px;
    background-color: transparent;
    cursor: pointer;
}

.portfolio-modal .close-modal:hover {
    opacity: .3;
}

.portfolio-modal .close-modal .lr {
    z-index: 1051;
    width: 1px;
    height: 75px;
    margin-left: 35px;
    background-color: #{{ site.color.dark }};
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.portfolio-modal .close-modal .lr .rl {
    z-index: 1052;
    width: 1px;
    height: 75px;
    background-color: #{{ site.color.dark }};
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

a.navbar-brand {
    padding:0;
}

